--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ section#img01{
     
 }
 section#img02{
-    background-image: url(https://img.freepik.com/vetores-gratis/silhueta-de-casal-se-beijando-em-um-fundo-de-coracao_1048-7352.jpg);
+    background-image: url(https://cdn.pixabay.com/photo/2020/02/12/22/35/silhouette-4844079_960_720.png);
     background-size: center center;
     
 }
